# NewsRecommendationSystem

./: .gitignore  README.md  requirements.txt  setup.cfg
news_recommendation/: data_preprocess.py  dataset.py  parameters.py  shared.py  test.py  train.py  utils.py
news_recommendation/data_preprocess/: mind.py  mind_compare_label.py  mind_dummy_label.py
news_recommendation/model/: __init__.py
news_recommendation/model/FedNAML/: __init__.py
news_recommendation/model/FedNRMS/: __init__.py  news_encoder.py
news_recommendation/model/LSTUR/: __init__.py  news_encoder.py  user_encoder.py
news_recommendation/model/NAIVE/: __init__.py  news_encoder.py  user_encoder.py
news_recommendation/model/NAML/: __init__.py  news_encoder.py  user_encoder.py
news_recommendation/model/NRMS/: __init__.py  news_encoder.py  user_encoder.py
news_recommendation/model/TANR/: __init__.py  news_encoder.py  user_encoder.py
news_recommendation/model/general/attention/: additive.py  multihead_self.py
news_recommendation/model/general/click_predictor/: DNN.py  dot_product.py
news_recommendation/model/general/trainer/: centralized.py  federated.py
src/: config.py  data_preprocess.py  espy.py  my_data_preprocess.py  parsed.py  recommend.py  test.py  train.py  utils.py  web.py
src/model/DKN/: __init__.py
src/static/: 叶竹鹏.json  李怡林.json  王开宇.json  王轶群.json  胡嘉豪.json  马永嘉.json
src/static/css/: style.css
src/static/js/: script.js
src/templates/: blog.html  index.html  test.html
